--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimpleLightbox library</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.css" integrity="sha512-bhYgu+LnK6ZXsq18JjhqqzZjnw4GzgCe6s34JBw09tQZ9oFC5tdSlLJW/7ZCf9EXuepe6tnQW57X8z3DKnsAGg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -13,7 +14,37 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.js" integrity="sha512-X1tKd7cMiYWKVDmFHSn+z1Y+BdrNG6Qvrhj3emg0ZOMsAuzug4ET9PmOFBgYyvcjI1hHGxhkQ1IXhOd9obYeFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
+
+
+
+<!-- Зроби таку саму галерею як в першому завданні, але використовуючи бібліотеку 
+SimpleLightbox, яка візьме на себе обробку кліків по зображеннях, відкриття і 
+закриття модального вікна, а також гортання зображень за допомогою клавіатури.
+
+
+Необхідно трохи змінити розмітку картки галереї, використовуй цей шаблон.
+
+<li class="gallery__item">
+   <a class="gallery__link" href="large-image.jpg">
+      <img class="gallery__image" src="small-image.jpg" alt="Image description" />
+   </a>
+</li>
+
+Виконуй це завдання у файлах 02-lightbox.html і 02-lightbox.js. Розбий його 
+на декілька підзавдань:
+
+    Створення і рендер розмітки на підставі масиву даних galleryItems і наданого 
+    шаблону елемента галереї. Використовуй готовий код з першого завдання.
+    Підключення скрипту і стилів бібліотеки, використовуючи CDN сервіс cdnjs. 
+    Необхідно додати посилання на два файли: simple-lightbox.min.js і 
+    simple-lightbox.min.css.
+    Ініціалізація бібліотеки після створення і додання елементів галереї у 
+    ul.gallery. Для цього ознайомся з документацією SimpleLightbox - насамперед 
+    секції «Usage» і «Markup».
+    Подивися в документації секцію «Options» і додай відображення підписів до 
+    зображень з атрибута alt. Нехай підпис буде знизу і з'являється через 250 
+    мілісекунд після відкриття зображення. -->
